--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>This is site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="./css/styles.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
     <link rel="icon" type="image" href="https://code.s3.yandex.net/web-code/js-favicon.ico">
 </head>
 <body>
@@ -30,7 +30,7 @@
     <img class="image" src="./snake.png" alt="">
     <p style="text-align: center"><button type="button" class="btn btn-outline-secondary" id="change_image" >Еще фото</button></p>
     <script src="https://code.s3.yandex.net/web-code/smoothly.js"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </main>
 
 <footer>
