--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 <main>
     <h2>Добро пожаловать на сайт Василия Серикова!</h2>
-    <p id="position_btheme"><button type="button" class="btn btn-outline-secondary" id="change_theme">Сменить тему</button></p>
+    <p id="position_btheme">
+        <button type="button" class="btn btn-outline-secondary" id="change_theme">Сменить тему</button>
+    </p>
     <p>Здесь Вы можете узнать немного обо мне и моих увлечениях.</p>
     <h3>Кто же я?</h3>
     <ol>
